--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install pyOpenSSL && pip install -r requirements.txt
       - name: Test Level-1
         run: |
           python Level-1/tests.py
