--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,6 +23,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+      - name: apt-get
+        run: |
+          sudo apt-get update && sudo apt-get install libldap2-dev libsasl2-dev
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip
